# mango

./: .gitignore  CMakeLists.txt  ast.cpp  ast.h  call_stack.h  data_type.cpp  data_type.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  string_builder.cpp  string_builder.h  token.cpp  token.h  types.cpp  types.h
interpreter/: call_stack.cpp  call_stack.h  interpreter.cpp  interpreter.h  scope.cpp  scope.h  types.cpp  types.h  value.cpp  value.h
